ARROW-9389: [C++] Add binary metafunctions for the set lookup kernels isin and match that can be called with CallFunction

This improves the usability of these kernels in language bindings, reducing the need to create bindings for `SetLookupOptions`.

Closes #7715 from wesm/ARROW-9389

Authored-by: Wes McKinney <wesm@apache.org>
Signed-off-by: Wes McKinney <wesm@apache.org>