cpp/src/arrow/compute/kernels/scalar_set_lookup.cc
@@ -395,6 +395,32 @@ void AddBasicSetLookupKernels(ScalarKernel kernel,
   }
 }
 
+// Enables calling isin with CallFunction as though it were binary.
+class IsInMetaBinary : public MetaFunction {
+ public:
+  IsInMetaBinary() : MetaFunction("isin_meta_binary", Arity::Binary()) {}
+
+  Result<Datum> ExecuteImpl(const std::vector<Datum>& args,
+                            const FunctionOptions* options,
+                            ExecContext* ctx) const override {
+    DCHECK_EQ(options, nullptr);
+    return IsIn(args[0], args[1], ctx);
+  }
+};
+
+// Enables calling match with CallFunction as though it were binary.
+class MatchMetaBinary : public MetaFunction {
+ public:
+  MatchMetaBinary() : MetaFunction("match_meta_binary", Arity::Binary()) {}
+
+  Result<Datum> ExecuteImpl(const std::vector<Datum>& args,
+                            const FunctionOptions* options,
+                            ExecContext* ctx) const override {
+    DCHECK_EQ(options, nullptr);
+    return Match(args[0], args[1], ctx);
+  }
+};
+
 }  // namespace
 
 void RegisterScalarSetLookup(FunctionRegistry* registry) {
@@ -411,6 +437,8 @@ void RegisterScalarSetLookup(FunctionRegistry* registry) {
     isin_base.null_handling = NullHandling::COMPUTED_PREALLOCATE;
     DCHECK_OK(isin->AddKernel(isin_base));
     DCHECK_OK(registry->AddFunction(isin));
+
+    DCHECK_OK(registry->AddFunction(std::make_shared<IsInMetaBinary>()));
   }
 
   // Match uses Int32Builder and so is responsible for all its own allocation
@@ -426,6 +454,8 @@ void RegisterScalarSetLookup(FunctionRegistry* registry) {
     match_base.signature = KernelSignature::Make({null()}, int32());
     DCHECK_OK(match->AddKernel(match_base));
     DCHECK_OK(registry->AddFunction(match));
+
+    DCHECK_OK(registry->AddFunction(std::make_shared<MatchMetaBinary>()));
   }
 }
 
